--- a/pages/isTriangle.html
+++ b/pages/isTriangle.html
@@ -15,7 +15,7 @@
                 <a href="/pages/isTriangle.html"><li>is Triangle</li></a>
                <a href="/pages/quiz.html"><li>Quiz</li></a>
                <a href="/pages/Hypotenuse.html"><li>Hypotenuse</li>
-                <a href="/area.html"><li>Area of Triangle</li></a>
+                <a href="/pages/area.html"><li>Area of Triangle</li></a>
             </ul>
         </nav>
         <div>
