--- a/area.html
+++ b/area.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <a href="/pages/isTriangle.html"><li>is Triangle</li></a>
-           <a href="/pages/quiz.html"><li>Quiz</li></a>
-           <a href="/pages/Hypotenuse.html"><li>Hypotenuse</li>
-            <a href="/pages/area.html"><li>Area of Triangle</li></a>
+            <a href="/isTriangle.html"><li>is Triangle</li></a>
+           <a href="/quiz.html"><li>Quiz</li></a>
+           <a href="/Hypotenuse.html"><li>Hypotenuse</li>
+            <a href="/area.html"><li>Area of Triangle</li></a>
         </ul>
     </nav>
     <div>
