--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="/isTriangle.html"><li>is Triangle</li></a>
            <a href="/quiz.html"><li>Quiz</li></a>
            <a href="/Hypotenuse.html"><li>Hypotenuse</li>
-            <a href="/area.html"><li>Area of Triangle</li></a>
+            <a href="/index.html"><li>Area of Triangle</li></a>
         </ul>
     </nav>
     <div>
