--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
             <ul>
                 <a href="/isTriangle.html"><li>is Triangle</li></a>
                <a href="/quiz.html"><li>Quiz</li></a>
-               <a href="/Hypotenuse.html"><li>Hypotenuse</li>
+               <a href="/hypotenuse.html"><li>Hypotenuse</li>
                 <a href="/index.html"><li>Area of Triangle</li></a>
             </ul>
         </nav>
