--- a/isTriangle.html
+++ b/isTriangle.html
@@ -8,7 +8,7 @@
     <title>Fun With Triangles</title>
     
 </head>
-<body class="bg-neutral-700">
+<body class="">
     <div>
 
         <nav class="mb-4 ">
