--- a/isTriangle.html
+++ b/isTriangle.html
@@ -8,19 +8,19 @@
     <title>Fun With Triangles</title>
     
 </head>
-<body class="">
+<body class="bg-lime-200">
     <div>
 
-        <nav class="mb-4 ">
+        <nav class="mb-4 bg-gray-600 p-10">
             <ul class="flex flex-row justify-between">
-                <a href="/isTriangle.html"><li>is Triangle</li></a>
-               <a href="/quiz.html"><li>Quiz</li></a>
-               <a href="/hypotenuse.html"><li>Hypotenuse</li>
-                <a href="/index.html"><li>Area of Triangle</li></a>
+                <a class="hover:text-white text-white" href="/isTriangle.html"><li>isTriangle?</li></a>
+               <a class="hover:text-white" href="/quiz.html"><li>Quiz</li></a>
+               <a class="hover:text-white" href="/hypotenuse.html"><li>Hypotenuse</li>
+                <a class="hover:text-white" href="/index.html"><li>Area of Triangle</li></a>
             </ul>
         </nav>
-        <div class="flex flex-col border border-solid w-2/3 m-auto">
-            <h1>Angles of Triangles</h1>
+        <div class="flex flex-col border-4 border-solid w-2/3 m-auto border-rose-300 bg-yellow-200">
+            <h1 class="text-center m-2">Angles of Triangles</h1>
             <label for="angle1">Angel1</label>
             <input type="number" id="angle1">
             <label for="angle2">Angel2</label>
