--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="/output.css" rel="stylesheet">
+    <title>Quizzes</title>
     <style>
         p{
             display: inline;
@@ -12,16 +13,14 @@
     </style>
 </head>
 <body>
-    <div>
-        <nav>
-            <ul>
-                <a href="/isTriangle.html"><li>is Triangle</li></a>
-               <a href="/quiz.html"><li>Quiz</li></a>
-               <a href="/hypotenuse.html"><li>Hypotenuse</li>
-                <a href="/index.html"><li>Area of Triangle</li></a>
-            </ul>
-        </nav>
-        <div>
+    <nav class="mb-4 bg-gray-600">
+        <ul class="flex flex-row justify-between">
+            <a href="/isTriangle.html"><li>is Triangle</li></a>
+           <a href="/quiz.html"><li>Quiz</li></a>
+           <a href="/hypotenuse.html"><li>Hypotenuse</li>
+            <a href="/index.html"><li>Area of Triangle</li></a>
+        </ul>
+    </nav>
     </div>
     <h1>Quiz on triangles</h1>
 <h2>For each correct answer you will get 1 point</h2>
