--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Hypotenuse</title>
 </head>
-<body class="bg-neutral-700">
-    <nav class="mb-4 ">
+<body class="bg-amber-200">
+    <nav class="mb-4 bg-gray-600 p-10">
         <ul class="flex flex-row justify-between">
-            <a href="/isTriangle.html"><li>is Triangle</li></a>
-           <a href="/quiz.html"><li>Quiz</li></a>
-           <a href="/hypotenuse.html"><li>Hypotenuse</li>
-            <a href="/index.html"><li>Area of Triangle</li></a>
+            <a class="hover:text-white" href="/isTriangle.html"><li>isTriangle?</li></a>
+           <a class="hover:text-white" href="/quiz.html"><li>Quiz</li></a>
+           <a class="hover:text-white text-white" href="/hypotenuse.html"><li>Hypotenuse</li>
+            <a class="hover:text-white" href="/index.html"><li>Area of Triangle</li></a>
         </ul>
     </nav>
-    <div class="flex flex-col border border-solid w-2/3 m-auto">
+    <div class="flex flex-col border-4 border-solid border-blue-500 w-2/3 m-auto mt-10">
+        <h1 class="text-center m-2">Find The Hypotenuse</h1>
         <label for="base">Enter Base Value</label>
         <input type="number" id="base">
         <label for="height">Enter Height Value</label>
