--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Area Finder</title>
+    <link href="/output.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="w-5 ">
-        <ul >
-            <a  href="/isTriangle.html"><li class="inline">is Triangle</li></a>
-           <a  href="/quiz.html"><li >Quiz</li></a>
-           <a href="/hypotenuse.html"><li>Hypotenuse</li>
-            <a href="/index.html"><li>Area of Triangle</li></a>
+<body class="bg-orange-600">
+    <nav class="mb-4 bg-gray-600 p-10">
+        <ul class="flex flex-row justify-between">
+            <a class="hover:text-white" href="/isTriangle.html"><li>isTriangle?</li></a>
+           <a class="hover:text-white" href="/quiz.html"><li>Quiz</li></a>
+           <a class="hover:text-white" href="/hypotenuse.html"><li>Hypotenuse</li>
+            <a class="hover:text-white text-white" href="/index.html"><li>Area of Triangle</li></a>
         </ul>
     </nav>
-    <div class="flex flex-col bg-blue-300">
+    </div>
+    </nav>
+    <div class="flex flex-col border-2 border-sky-500 bg-red-200 m-20">
+        <h1 class="text-center m-2">Find The Area</h1>
         <label for="first">Enter first side of a triangle</label>
         <input type="number" id="first">
         <label for="second">Enter Second side of a triangle</label>
         <input type="number" id="second">
         <label for="third">Enter Third side of a triangle</label>
         <input type="number" id="third">
-        <button  id="calculate">Calculate</button>
+        <button  id="calculate" class="bg-blue-500 w-40 justify-center hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full m-auto mt-5">Calculate</button>
         <p id="output"></p>
     </div>
     <script>
