--- a/quiz.html
+++ b/quiz.html
@@ -13,53 +13,52 @@
     </style>
 </head>
 <body>
-    <nav class="mb-4 bg-gray-600">
+    <nav class="mb-4 bg-gray-600 p-10">
         <ul class="flex flex-row justify-between">
-            <a href="/isTriangle.html"><li>is Triangle</li></a>
-           <a href="/quiz.html"><li>Quiz</li></a>
-           <a href="/hypotenuse.html"><li>Hypotenuse</li>
-            <a href="/index.html"><li>Area of Triangle</li></a>
+            <a class="hover:text-white" href="/isTriangle.html"><li>isTriangle?</li></a>
+           <a class="hover:text-white text-white" href="/quiz.html"><li>Quiz</li></a>
+           <a class="hover:text-white " href="/hypotenuse.html"><li>Hypotenuse</li>
+            <a class="hover:text-white" href="/index.html"><li>Area of Triangle</li></a>
         </ul>
     </nav>
-    </div>
-    <h1>Quiz on triangles</h1>
-<h2>For each correct answer you will get 1 point</h2>
+    <div class="border-4 border-blue-500">
+    <h1 class="text-center font-extrabold h-6">Quiz on triangles</h1>
+<h2 class="text-center font-semibold">For each correct answer you will get 1 point</h2>
 <form id="quizForm">
 <ol>
- <li>
+ <li class="bg-emerald-200 m-4 p-5">
    <p> What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p><br>
-   <p><input type="radio" name="q1" value="45°">45°</p>
-   <p><input type="radio" name="q1" value="90°">90°</p>
-    <p><input type="radio" name="q1" value="60°">60°</p>
+   <p class="mr-3"><input type="radio" name="q1" value="45°">45°</p>
+   <p class="mr-3"><input type="radio" name="q1" value="90°">90°</p>
+    <p class="mr-3"><input type="radio" name="q1" value="60°">60°</p>
  </li> 
- <li>
+ <li class="bg-emerald-200 m-4 p-5">
    <p> If a triangle has an angle of 90 degrees, what is it called?</p><br>
-   <p><input type="radio" name="q2" value="obtuse">obtuse</p>
-   <p><input type="radio" name="q2"  value="acute">acute</p>
-    <p><input type="radio" name="q2" value="right-angled">right-angled</p>
+   <p class="mr-3"><input type="radio" name="q2" value="obtuse">obtuse</p>
+   <p class="mr-3"><input type="radio" name="q2"  value="acute">acute</p>
+    <p class="mr-3"><input type="radio" name="q2" value="right-angled">right-angled</p>
  </li> 
- <li>
+ <li class="bg-emerald-200 m-4 p-5">
    <p> What type of triangle has 3 equal sides and 3 equal angles that measure 60°</p><br>
-   <p><input type="radio" name="q3" value="Equilateral">Equilateral</p>
-   <p><input type="radio" name="q3" value="acute">acute</p>
-    <p><input type="radio" name="q3" value="right-angled">right-angled</p>
+   <p class="mr-3"><input type="radio" name="q3" value="Equilateral">Equilateral</p>
+   <p class="mr-3"><input type="radio" name="q3" value="acute">acute</p>
+    <p class="mr-3"><input type="radio" name="q3" value="right-angled">right-angled</p>
 </li> 
-       <li>
+       <li class="bg-emerald-200 m-4 p-5">
    <p> A right triangle is a triangle that has one 90 degree angle.</p><br>
-   <p><input type="radio" name="q4" value="True">True</p>
-   <p><input type="radio" name="q4" value="False">False</p>
-    <p><input type="radio" name="q4" value="Can't Say">Can't Say</p>
+   <p class="mr-3"><input type="radio" name="q4" value="True">True</p>
+   <p class="mr-3"><input type="radio" name="q4" value="False">False</p>
+    <p class="mr-3"><input type="radio" name="q4" value="Can't Say">Can't Say</p>
 </li> 
-       <li>
+       <li class="bg-emerald-200 m-4 p-5">
    <p> What is an isosceles triangle?</p><br>
-   <p><input type="radio" name="q5" value="A triangle with 3 equal sides">A triangle with 3 equal sides</p>
-   <p><input type="radio" name="q5" value="A triangle with 2 equal sides">A triangle with 2 equal sides</p>
-    <p><input type="radio" name="q5" value="A triangle with no equal sides">A triangle with no equal sides</p>
+   <p class="mr-3"><input type="radio" name="q5" value="A triangle with 3 equal sides">A triangle with 3 equal sides</p>
+   <p class="mr-3"><input type="radio" name="q5" value="A triangle with 2 equal sides">A triangle with 2 equal sides</p>
+    <p class="mr-3"><input type="radio" name="q5" value="A triangle with no equal sides">A triangle with no equal sides</p>
 </li> 
-
 </ol>
-<button id="submit">Submit</button>
-<p id="output"></p>
+<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-3 rounded m-auto" id="submit">Submit</button>
+<div class="m-5 text-teal-600" id="output"></div>
 </form>
     </div>
     <script>
