--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <nav class="mb-4 bg-gray-600 p-10">
+    <nav class=" bg-gray-600 p-10">
         <ul class="flex flex-row justify-between">
             <a class="hover:text-white" href="/isTriangle.html"><li>isTriangle?</li></a>
            <a class="hover:text-white text-white" href="/quiz.html"><li>Quiz</li></a>
