--- a/isTriangle.html
+++ b/isTriangle.html
@@ -37,15 +37,18 @@
         let angle3=document.getElementById('angle3')
         let result=document.getElementById('result')
         function isTriangle(){
+            if(angle1.value===""|| angle2.value===""||angle3.value===""){
+                alert("Please Enter the value");
+            }
+            else{
             if(Number(angle1.value)+Number(angle2.value)+Number(angle3.value)===180){
-                console.log(angle1.value);
                 result.innerText="They Form a Triangle"
         }
         else{
                 result.innerText="They Do not Form a Triangle"
 
             }
-        }
+        }}
     </script>
 </body>
 </html>
